# tinycoro

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md
include/tinycoro/: Algorithms.hpp  Algoritms.hpp  CMakeLists.txt  ChronoLiteralsCoAwait.hpp  FireAndForget.hpp  Generator.hpp  StaticCoroThreadPool.cpp  StaticCoroThreadPool.hpp  Task.cpp  Task.hpp  TinyCoro.hpp  Traits.hpp
include/tinycoro/io/: CMakeLists.txt  EpollAsyncAutoResetEvent.cpp  EpollAsyncAutoResetEvent.hpp  File.cpp  File.h  IOAsyncAutoResetEvent.cpp  IOAsyncAutoResetEvent.hpp  IOAsyncStdin.hpp  IOContext.cpp  IOContext.hpp  IOEvent.cpp  IOEvent.hpp  IOOperation.hpp  Socket.cpp  Socket.hpp
tests/: CMakeLists.txt  main.cpp
